tachidesk (${version}-1) unstable; urgency=medium
 -- Mahor Foruzesh <mahorforuzesh@pm.me>  Fri, 14 Jan 2022 00:00:00 +0000