@@ -73,7 +73,7 @@ jobs:
           ./windows-bundler.sh win32
           ./windows-bundler.sh win64
           ./unix-bundler.sh linux-x64
-          ./unix-bundler.sh debian-x64
+          ./debian-packager.sh
           ./unix-bundler.sh macOS-x64
           ./unix-bundler.sh macOS-arm64
 
