@@ -1,0 +1,2 @@
+#!/bin/sh
+exec /usr/bin/java -jar /usr/share/java/tachidesk/tachidesk.jar
